--- a/addons/ccm-nutanix/nutanix-config.yaml
+++ b/addons/ccm-nutanix/nutanix-config.yaml
@@ -37,7 +37,7 @@ metadata:
   namespace: kube-system
 data:
   ca.crt: |-
-    {{ .Config.CABundle | indent 4 }}
+    {{ .Config.CA.CABundle | indent 4 }}
 ---
 apiVersion: v1
 kind: Secret
