Prepare updated images for kubernetes 1.33 support (#3653)
* update used docker images

Signed-off-by: soer3n <srenhenning@googlemail.com>

* Reformat CCM Vsphere YAML

Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

* Set DEFAULT_STABLE to 1.33

Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

* Review updates

Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

---------

Signed-off-by: soer3n <srenhenning@googlemail.com>
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>
Co-authored-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/ccm-vsphere/ccm-vsphere.yaml
+++ b/addons/ccm-vsphere/ccm-vsphere.yaml
@@ -115,6 +115,7 @@ metadata:
     tier: control-plane
   namespace: kube-system
   annotations:
+    scheduler.alpha.kubernetes.io/critical-pod: ""
 spec:
   selector:
     matchLabels:
