Rename kubevirt's CCMLoadBalancerEnabled -> LoadBalancerEnabled
Signed-off-by: Artiom Diomin <artiom@kubermatic.com>

--- a/addons/ccm-kubevirt/config-map.yaml
+++ b/addons/ccm-kubevirt/config-map.yaml
@@ -11,5 +11,5 @@ data:
     instancesV2:
       zoneAndRegionEnabled: {{ .ZoneAndRegionEnabled }}
     loadBalancer:
-      enabled: {{ .CCMLoadBalancerEnabled }}
+      enabled: {{ .LoadBalancerEnabled }}
     {{ end }}
