--- a/addons/ccm-kubevirt/ccm-kubevirt.yaml
+++ b/addons/ccm-kubevirt/ccm-kubevirt.yaml
@@ -59,6 +59,34 @@ rules:
       - nodes
     verbs:
       - get
+      - list
+      - watch
+      - update
+  - apiGroups:
+      - ""
+    resources:
+      - services
+    verbs:
+      - get
+      - list
+      - watch
+      - update
+  - apiGroups:
+      - ""
+    resources:
+      - events
+    verbs:
+      - "*"
+  - apiGroups:
+      - coordination.k8s.io
+    resources:
+      - leases
+    verbs:
+      - get
+      - create
+      - list
+      - watch
+      - update
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -136,6 +164,9 @@ spec:
           securityContext:
             privileged: true
           volumeMounts:
+            - mountPath: /var/run/secrets/infracluster
+              name: infracluster
+              readOnly: true
             - mountPath: /etc/cloud
               name: cloud-config
               readOnly: true
