--- a/addons/csi-aws-ebs/aws-csi.yaml
+++ b/addons/csi-aws-ebs/aws-csi.yaml
@@ -8,8 +8,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -29,8 +29,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 automountServiceAccountToken: true
@@ -44,8 +44,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 automountServiceAccountToken: true
@@ -58,8 +58,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -87,14 +87,14 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
   - apiGroups: [""]
     resources: ["nodes"]
-    verbs: ["get", "patch"]
+    verbs: ["get", "patch", "list", "watch"]
   - apiGroups: ["storage.k8s.io"]
     resources: ["volumeattachments"]
     verbs: ["get", "list", "watch"]
@@ -110,8 +110,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -167,8 +167,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -208,8 +208,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 # Do not modify the rules below manually, see `make update-sidecar-dependencies`
@@ -253,8 +253,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -274,8 +274,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -295,8 +295,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -316,8 +316,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -337,8 +337,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -359,8 +359,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 rules:
@@ -377,8 +377,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 subjects:
@@ -399,8 +399,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -420,8 +420,8 @@ spec:
         app: ebs-csi-node
         app.kubernetes.io/name: aws-ebs-csi-driver
         app.kubernetes.io/instance: aws-ebs-csi-driver
-        helm.sh/chart: aws-ebs-csi-driver-2.40.1
-        app.kubernetes.io/version: "1.40.0"
+        helm.sh/chart: aws-ebs-csi-driver-2.45.1
+        app.kubernetes.io/version: "1.45.0"
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/managed-by: Helm
     spec:
@@ -591,8 +591,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
@@ -613,8 +613,8 @@ spec:
         app: ebs-csi-controller
         app.kubernetes.io/name: aws-ebs-csi-driver
         app.kubernetes.io/instance: aws-ebs-csi-driver
-        helm.sh/chart: aws-ebs-csi-driver-2.40.1
-        app.kubernetes.io/version: "1.40.0"
+        helm.sh/chart: aws-ebs-csi-driver-2.45.1
+        app.kubernetes.io/version: "1.45.0"
         app.kubernetes.io/component: csi-driver
         app.kubernetes.io/managed-by: Helm
     spec:
@@ -871,8 +871,8 @@ metadata:
   labels:
     app.kubernetes.io/name: aws-ebs-csi-driver
     app.kubernetes.io/instance: aws-ebs-csi-driver
-    helm.sh/chart: aws-ebs-csi-driver-2.40.1
-    app.kubernetes.io/version: "1.40.0"
+    helm.sh/chart: aws-ebs-csi-driver-2.45.1
+    app.kubernetes.io/version: "1.45.0"
     app.kubernetes.io/component: csi-driver
     app.kubernetes.io/managed-by: Helm
 spec:
